cambios en package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "title": "Brujos y Santeros",
-  "name": "startbootstrap-modern-business",
+  "title": "web 1.0",
+  "name": "santeria",
   "version": "4.1.2",
   "description": "Pagina web de consultas",
   "keywords": [
